Minor code cleanup & warnings fix
(cherry picked from commit e5e17721bb4059082a8c51ed4e0038e8b40a657b)